課題3【Bookersへ「いいね/コメント機能」を実装】

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -25,8 +25,21 @@
                 </td>
                 <td><%= link_to book.title,book_path(book.id) %></td>
                 <td><%= book.body%></td>
-              </tr>
+                <td>
+                  <% if current_user.already_favorited?(book) %>
+                     <%= link_to book_favorites_path(book),method: :delete do %>
+                        <i class="fas fa-heart"></i>
+                     <% end %>
+                  <% else %>
+                    <%= link_to book_favorites_path(book),method: :post do %>
+                    <i class="far fa-heart"></i>
+                     <% end %>
+                <% end %>
+
               <% end %>
+                </td>
+              </tr>
+              <%# end %>
             </tbody>
             </table>
           </div>
