--- a/app/views/books/_user.html.erb
+++ b/app/views/books/_user.html.erb
@@ -54,5 +54,23 @@
             <%= f.submit 'Create Book' , class:"btn bg-success btn-info mt-4"%>
           </div>
         <% end %>
+         <!-- 新しいフォームの内容を追加 -->
+         <%#= form_for @model do |f| %>
+         <%= form_with model:book do |f| %>
+         <div class="fome-grop">
+            <label for="title">Title</label>
+            <%= f.text_field :title,class:"form-control",placdhlder:"Title"%>
+          </div>
+
+          <div class="fome-grop">
+            <label for="Opinion">Opinion</label>
+             <%= f.text_area :body,class:"form-control",placdhlder:"Opinion"%>
+          </div>
+
+          <div class="fome-grop">
+            <%= f.submit 'Create Book' , class:"btn bg-success btn-info mt-4"%>
+          </div>
+
+          <% end %>
         </fome>
         </div>
