Finish:コメント機能を追加

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -35,6 +35,7 @@
                     <i class="far fa-heart"></i>
                      <% end %>
                 <% end %>
+                <%= book.favorites.count %>
 
               <% end %>
                 </td>
