--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -49,7 +49,7 @@
                  <%= book_comment.content %>
                </td>
                <% if book_comment.user_id == current_user.id %>
-              <td><%= link_to "Destroy", destroy_book_path(@book.id),class:"btn bth-sm bg-danger text-white", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+              <td><%= link_to "Destroy", book_book_comment_path(@book.id,book_comment.id),class:"btn bth-sm bg-danger text-white", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
                <% end %>
               </tr>
                <% end %>
