--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,8 +22,21 @@
                   <td><%= image_tag user.get_profile_image(50,50) %></td>
                   <td><%= user.name %></td>
                   <td><%= link_to "Show",user_path(user.id) %></td>
-                </tr>
+                  <td>フォロー数: <%= user.followings.count %></td>
+                  <td>フォロワー数: <%= user.followers.count %></td>
+                  <td>
+                      <%#= render partial: 'relationships/follow_button', locals: { user: user } %>
+                   <% if user != current_user %>
+                      <% if current_user.following?(user) %>
+                         <%= link_to "フォロー外す",user_relationships_path(user.id), method: :delete %>
+                         <% else %>
+                         <%= link_to "フォローする",user_relationships_path(user.id), method: :post %>
+                       <% end %>
+                    <% end %>
+                  </td>
                 <% end %>
+
+                </tr>
             </tbody>
           </table>
         </div>
