--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,6 +71,8 @@
         </div>
       </nav>
     </header>
+    <body>
+      <%#= render 'searches/search' %>
     <main class="mb-auto">
      <%= flash[:notice] %>
      <%= yield %>
