--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,7 +3,7 @@
    <div class ='container px-5 px-sm-0 mx-5'>
      <div class='row'>
        <!--検索機能-->
-       <div><%= render 'searches/search' %></div>
+       <div><%#= render 'searches/search' %></div>
        <!--User詳細、book投稿-->
        <%= render 'user', user:@user,book:@book%>
        <div class = 'col-md-8 offset-md-1'>
