--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@
               <td><%= @book.body %></td>
               <% if @book.user_id == current_user.id %>
               <td><%= link_to "Edit",edit_book_path(@book.id),class:"btn bth-sm bg-success text-white"%></td>
-              <td><%= link_to "Destroy", destroy_book_path(@book.id),class:"btn bth-sm bg-danger text-white", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
+              <td><%= link_to "Destroy", books_path(@book.id),class:"btn bth-sm bg-danger text-white", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
                <% end %>
                <td>
                   <% if current_user.already_favorited?(@book) %>
