--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -32,11 +32,11 @@
                 <td><%= book.body%></td>
                 <td>
                   <% if current_user.already_favorited?(book) %>
-                     <%= link_to book_favorites_path(book),method: :delete do %>
+                     <%= link_to book_favorites_path(book),method: :delete,remote: true do %>
                         <i class="fas fa-heart"></i>
                      <% end %>
                   <% else %>
-                    <%= link_to book_favorites_path(book),method: :post do %>
+                    <%= link_to book_favorites_path(book),method: :post,remote: true do %>
                     <i class="far fa-heart"></i>
                      <% end %>
                 <% end %>
