--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -34,24 +34,16 @@
                 <%= @book.favorites.count %>
               <%# end %>
                 </td>
-                <td>コメント数：<%= @book.book_comments.count %></td>
+                <td class="book-comments-counter">
+                  <%= render "book_comments/counter", book: @book %>
+                </td>
               </tr>
             </tbody>
           </table>
          <div class="book-comments-index">
-      <%= render 'book_comments/index', book: @book %>
-    </div>
-    <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
-：
-         <%= form_with model: [@book, @book_comment], local:false do |f| %>
-            <div>
-              <%= f.label :content %>
-              <%=  f.text_area :content, class: 'form-control' %>
-            </div>
-            <%# if @book.user_id == current_user.id %>
-             <%= f.submit '送信', class: 'btn btn-black btn-block' %>
-            <% #end %>
-          <% end %>
+            <%= render "book_comments/index", book: @book %>
+         </div>
+         <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
+        </div>
       </div>
     </div>
-  </div>
