--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -30,24 +30,13 @@
                 </td>
                 <td><%= link_to book.title,book_path(book.id) %></td>
                 <td><%= book.body%></td>
-                <!--追加0706JavaScriptのコードでは、IDを使って特定の要素にアクセス-->
+                <!--追加 JavaScriptのコードでは、IDを使って特定の要素にアクセス-->
                 <td id="favorite_btn_<%= book.id %>">
-                <td>
-                  <% if current_user.already_favorited?(book) %>
-                     <%= link_to book_favorites_path(book),method: :delete,remote: true do %>
-                        <i class="fas fa-heart"></i>
-                     <% end %>
-                  <% else %>
-                    <%= link_to book_favorites_path(book),method: :post,remote: true do %>
-                    <i class="far fa-heart"></i>
-                     <% end %>
-                <% end %>
-                <%= book.favorites.count %>
-              <% end %>
+                  <%= render 'favorites/favorite', book: book %>
                 </td>
                  <td>コメント数：<%= @book.book_comments.count %></td>
               </tr>
-              <%# end %>
+              <% end %>
             </tbody>
             </table>
           </div>
