--- a/app/views/book_comments/_form.html.erb
+++ b/app/views/book_comments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model:[book, book_comment], local: false) do |f| %>
+<%= form_with model:[book, book_comment], local: false, method: :post, url: book_book_comments_path(book.id) do |f| %>
   <%= f.text_area :content, rows:'5',placeholder: "コメントをここに", class: "w-100 comment-textarea" %>
   <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
 <% end %>
