--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,3 +1,3 @@
-$('#comment_counter').htmll("<%= j(render 'book_comments/counter', book: @comment.book) %>");
-$('#comment_index').html("<%= j(render 'book_comments/index', book: @book) %>");
-$('#book_comment_content').val("");
+$('.book-comments-counter').html("<%= j(render 'book_comments/counter', book: @book) %>");
+$('.book-comments-index').html("<%= j(render 'book_comments/index', book: @book) %>");
+$('.comment-textarea').val('');
