--- a/app/views/book_comments/destroy.js.erb
+++ b/app/views/book_comments/destroy.js.erb
@@ -1,2 +1,2 @@
-$('#comment_counter').html("<%= j(render 'book_comments/counter', book: @comment.book) %>")
-$('#comment_index').html("<%= j(render 'book_comments/index', book: @comment.book) %>")
+$('.book-comments-counter').html("<%= j(render 'book_comments/counter', book: @book,book_comment: @comment) %>")
+$('.book-comments-index').html("<%= j(render 'book_comments/index', book: @book,book_comment: @comment) %>")
