--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,19 +21,9 @@
               <td><%= link_to "Edit",edit_book_path(@book.id),class:"btn bth-sm bg-success text-white"%></td>
               <td><%= link_to "Destroy", books_path(@book.id),class:"btn bth-sm bg-danger text-white", method: :delete, "data-confirm" => "本当に削除しますか？" %></td>
                <% end %>
-               <td>
-                  <% if current_user.already_favorited?(@book) %>
-                     <%= link_to book_favorites_path(@book),method: :delete do %>
-                        <i class="fas fa-heart"></i>
-                     <% end %>
-                  <% else %>
-                    <%= link_to book_favorites_path(@book),method: :post do %>
-                    <i class="far fa-heart"></i>
-                     <% end %>
-                <% end %>
-                <%= @book.favorites.count %>
-              <%# end %>
-                </td>
+               <td id="favorite_btn_<%= @book.id %>">
+                 <%= render 'favorites/favorite', book: @book %>
+               </td>
                 <td class="book-comments-counter">
                   <%= render "book_comments/counter", book: @book %>
                 </td>
